css/css-transforms/animation/transform-interpolation-inline-value.html has failures https://bugs.webkit.org/show_bug.cgi?id=235808 <rdar://88488540>

Reviewed by Antti Koivisto.

We have been making changes recently in ComputedStyleExtractor.cpp to deal with the case
where no renderer is available to computedTransform(), in which case we should not be
yielding a computed `matrix{3d}()` representation but rather a CSSValueList with individual
functions matching each TransformOperation found in the provided RenderStyle.

We had naively been making those changes to make css/css-transforms/animation/transform-interpolation-computed-value.html
pass, but I had neglected to notice that this test used computedStyleMap() which specifies
a different way to serialize transforms (https://drafts.css-houdini.org/css-typed-om/#transformvalue-serialization).

So, we just fixed the computedStyleMap() behavior by teaching the CSS Typed OM code to correctly
create CSSTransformComponent concrete subclasses for each of the various transform functions,
see bug 245785.

So in this patch, in order to fix css/css-transforms/animation/transform-interpolation-inline-value.html,
we implement the correct behavior for generating a CSSValueList in computedTransform() when a renderer
is not provided.

To be able to do just that though, we also needed to make a change in the way TransformOperation,
the class used to represent each transform function in RenderStyle, is blended. Previously, when
blending two operations with matching types, for instance translateX(), we would always use the more
canonical operation type, in this case translate(x, y). However, for serialization purposes, we must
be able to keep a function provided as translateX() in CSS as translateX() when serialized. So we
make a small change to TransformOperation::sharedPrimitiveType() to keep the most granular operation
type when the two blended operations have the exact same type.

This also fixes the remaining failure in css/css-animations/KeyframeEffect-getKeyframes.tentative.html (bug 235139)
which relied on this serialization behavior.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/KeyframeEffect-getKeyframes.tentative-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/animation/transform-interpolation-inline-value-expected.txt:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::computedTransform):
* Source/WebCore/platform/graphics/transforms/TransformOperation.cpp:
(WebCore::TransformOperation::sharedPrimitiveType const):

Canonical link: https://commits.webkit.org/255038@main